# wagyu-key-gen

./: .gitignore  .gitmodules  .yarnrc.yml  CHANGELOG.md  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.electron.config.js  webpack.react.config.js
src/vendors/ethstaker-deposit-cli-0.6.0/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt  requirements_test.in  requirements_test.txt  test_binary_deposit_script.py  test_btec_script.py  test_deposit_script.py  tox.ini
src/vendors/ethstaker-deposit-cli-0.6.0/.github/workflows/: build.yml  docs.yml  runner.yml
src/vendors/ethstaker-deposit-cli-0.6.0/build_configs/common/: requirements.in  requirements.txt
src/vendors/ethstaker-deposit-cli-0.6.0/build_configs/macos/: build.spec
src/vendors/ethstaker-deposit-cli-0.6.0/build_configs/windows/: build.spec  requirements.in
src/vendors/ethstaker-deposit-cli-0.6.0/docs/src/: deposit_data_file.md  existing_mnemonic.md  generate_bls_to_execution_change_keystore.md  landing.md  partial_deposit.md  reporting_vulnerability.md  signed_exit_transaction_file.md
src/vendors/ethstaker-deposit-cli-0.6.0/ethstaker_deposit/cli/: exit_transaction_mnemonic.py  generate_bls_to_execution_change.py
src/vendors/ethstaker-deposit-cli-0.6.0/ethstaker_deposit/utils/: crypto.py  ssz.py  validation.py
src/vendors/ethstaker-deposit-cli-0.6.0/tests/test_cli/: test_existing_mnemonic.py
src/vendors/ethstaker-deposit-cli-0.6.0/tests/test_utils/: test_intl.py  test_ssz.py  test_validation.py
src/vendors/ethstaker-deposit-cli-1.1.0/: Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_test.txt  test_binary_btec_script.py  test_binary_deposit_script.py
src/vendors/ethstaker-deposit-cli-1.1.0/.github/workflows/: build.yml  runner.yml
src/vendors/ethstaker-deposit-cli-1.1.0/docs/src/: bls_to_execution_change_file.md  bls_to_execution_change_keystore_file.md  deposit_data_file.md  existing_mnemonic.md  exit_transaction_keystore.md  exit_transaction_mnemonic.md  generate_bls_to_execution_change.md  generate_bls_to_execution_change_keystore.md  landing.md  local_development.md  new_mnemonic.md  partial_deposit.md  release_process.md
src/vendors/ethstaker-deposit-cli-1.1.0/ethstaker_deposit/: credentials.py  deposit.py  settings.py
src/vendors/ethstaker-deposit-cli-1.1.0/ethstaker_deposit/cli/: exit_transaction_mnemonic.py  generate_bls_to_execution_change_keystore.py
src/vendors/ethstaker-deposit-cli-1.1.0/ethstaker_deposit/key_handling/: keystore.py
src/vendors/ethstaker-deposit-cli-1.1.0/ethstaker_deposit/utils/: file_handling.py
src/vendors/ethstaker-deposit-cli-1.1.0/tests/test_cli/: test_exit_transaction_mnemonic.py  test_new_mnemonic.py
src/vendors/ethstaker-deposit-cli-1.2.2/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  requirements_test.txt  test_btec_script.py  test_deposit_script.py  tox.ini
src/vendors/ethstaker-deposit-cli-1.2.2/.github/: dependabot.yml
src/vendors/ethstaker-deposit-cli-1.2.2/.github/workflows/: build.yml  comment.yml  docs.yml  runner.yml
src/vendors/ethstaker-deposit-cli-1.2.2/build_configs/common/: requirements.txt
src/vendors/ethstaker-deposit-cli-1.2.2/build_configs/windows/: requirements.txt
src/vendors/ethstaker-deposit-cli-1.2.2/docs/: book.toml
src/vendors/ethstaker-deposit-cli-1.2.2/docs/src/: SUMMARY.md  existing_mnemonic.md  exit_transaction_keystore.md  exit_transaction_mnemonic.md  generate_bls_to_execution_change.md  generate_bls_to_execution_change_keystore.md  keystore_file.md  new_mnemonic.md  other_install_options.md  partial_deposit.md  quick_setup.md
src/vendors/ethstaker-deposit-cli-1.2.2/ethstaker_deposit/: __main__.py  credentials.py  deposit.py  settings.py
src/vendors/ethstaker-deposit-cli-1.2.2/ethstaker_deposit/cli/: existing_mnemonic.py  exit_transaction_keystore.py  exit_transaction_mnemonic.py  generate_bls_to_execution_change.py  generate_bls_to_execution_change_keystore.py  generate_keys.py  new_mnemonic.py  partial_deposit.py  test_keystore.py
src/vendors/ethstaker-deposit-cli-1.2.2/ethstaker_deposit/utils/: ascii_art.py  click.py  config.py  constants.py  intl.py  terminal.py  validation.py
src/vendors/ethstaker-deposit-cli-1.2.2/tests/test_cli/: helpers.py  test_existing_mnemonic.py  test_exit_transaction_keystore.py  test_new_mnemonic.py  (+1 more)
static/: icon.icns
(+220 files in other folders)
