[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ethstaker_deposit"]

[tool.setuptools.dynamic]
version = {attr = "ethstaker_deposit.__version__"}

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[project]
name = "ethstaker_deposit"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "click==8.1.8",
    "eth-typing==5.1.0",
    "eth-utils==5.1.0",
    "pycryptodome==3.21.0",
    "pyperclip==1.9.0",
    "py-ecc==7.0.1",
    "ssz==0.5.1",
    "cached-property==2.0.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cytoolz==1.0.1",
    "eth-hash==0.7.0",
    "hexbytes==1.2.1",
    "lru-dict==1.3.0",
    "pyrsistent==0.20.0",
    "six==1.17.0",
    "toolz==1.0.0",
    "typing-extensions==4.12.2",
]
requires-python = ">=3.9,<4"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "exceptiongroup==1.2.2",
    "jsonschema==4.23.0",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "coverage==7.6.10",
    "tomli==2.2.1",
    "attrs==24.2.0",
    "iniconfig==2.0.0",
    "jsonschema-specifications==2023.12.1",
    "mypy-extensions==1.0.0",
    "packaging==24.1",
    "pluggy==1.5.0",
    "referencing==0.35.1",
    "rpds-py==0.20.0",
    "typing-extensions==4.12.2",
    "ruff==0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/eth-educators/ethstaker-deposit-cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
